--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,18 +11,22 @@ project:
 # Website Settings
 website:
   title: "Johann Wagner"
+  description: "Core Values: Balance, Love, Community"
 
   navbar:
     pinned: true
 
     # Sub-pages
     left:
-      - href: projects/index.qmd
-        text: Projects
-      - href: blog/index.qmd
-        text: Blog
-      - href: cv/index.qmd
-        text: CV
+      - text: "Projects"
+        href: projects/index.qmd
+
+      - text: "Blog"
+        href: blog/index.qmd
+
+      - text: "CV"
+        href: cv/index.qmd
+
 
     # Social Media Links
     right:
@@ -39,8 +43,6 @@ website:
   page-footer:
     left: |
       <span class="faux-block">&#169; 2023 Johann Wagner CC BY-SA 4.0</span>
-    center: |
-      <span class="faux-block"><a href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/">View the tutorial for this template!</a></span>
     right: |
       <span class="faux-block"><a href="https://github.com/johann-wagner/johann-wagner">View source code on my GitHub</a></span>
 
