--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,8 +25,8 @@ website:
       - text: "Projects"
         href: projects/index.qmd
 
-      - text: "Posts"
-        href: posts_sub_page/index.qmd
+      - text: "Blog"
+        href: blog/index.qmd
 
       - text: "CV"
         href: cv/index.qmd
