--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,9 +54,10 @@ website:
 format:
   html:
     theme:
-      light: united
-      dark: darkly
-    css: styles.css
+      light: [united, custom.scss]
+      dark: [darkly, custom.scss]
+    google-fonts:
+      - Atkinson Hyperlegible: [400, 700, 400italic, 700italic]
     toc: true
     page-layout: full
     code-link: true
