--- a/blog/_metadata.yml
+++ b/blog/_metadata.yml
@@ -6,12 +6,15 @@
 freeze: true
 
 # HTML Authoring
-toc: true
-toc-title: Contents
-toc-location: left
-anchor-sections: true
-title-block-banner: false
-lang: en
+format:
+  html:
+    highlight: pygments
+    toc: true
+    toc-title: Contents
+    toc-location: left
+    anchor-sections: true
+    title-block-banner: false
+    lang: en
 
 # Code
 code-copy: true
